--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,18 +1,8 @@
-<ng-container *ngIf="isLoading">
-  <mat-spinner></mat-spinner>
-</ng-container>
-
-
 <div class="container mt-5">
   <div class="row">
     <div class="col-md-4 order-md-2 mb-4">
 
-
-
-   
-
-
-        <div *ngIf="auth.user$ | async as user">
+        <ng-container *ngIf="auth.user$ | async as user">
           <h4 class="d-flex justify-content-between align-items-center mb-3">
             <span class="text-muted">Your cart</span>
             <span class="badge badge-secondary badge-pill">{{user.cart.length}}</span>
@@ -26,7 +16,7 @@
                 <a [href]="item.img"><small class="text-muted">View Card</small></a>
               </div>
               <span class="text-muted">${{item.cost}}</span>
-              <button type="button" class="close" aria-label="Close" (click)="removeItem(item)">
+              <button type="button" class="close" aria-label="Close" (click)="removeItem(item)" *ngIf="user.paymentStatus != 'charge:pending' && (auth.user$ | async)?.paymentStatus != 'charge:created'">
                 <span aria-hidden="true">&times;</span>
               </button>
             </li>
@@ -47,169 +37,224 @@
           </li>
         </ul>
 
-        </div>
+
+        <form class="card p-2">
+          <div class="input-group">
+            <input type="text" class="form-control" placeholder="Promo code">
+            <div class="input-group-append">
+              <button type="submit" class="btn btn-secondary">Redeem</button>
+            </div>
+          </div>
+        </form>
+
+      </ng-container>
 
 
 
 
 
-      <form class="card p-2">
-        <div class="input-group">
-          <input type="text" class="form-control" placeholder="Promo code">
-          <div class="input-group-append">
-            <button type="submit" class="btn btn-secondary">Redeem</button>
+
+
+      <ng-container *ngIf="isLoading">
+        <div class="d-flex justify-content-center mt-5">
+          <div class="spinner-border" role="status" style="width: 100px; height: 100px;">
+            <span class="sr-only">Loading...</span>
           </div>
         </div>
-      </form>
+      </ng-container>
+
+
+
     </div>
+
+
     <div class="col-md-8 order-md-1">
-      <h4 class="mb-3">Shipping address</h4>
-      <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
-        <div class="row">
-          <div class="col-md-6 mb-3">
-            <label for="firstName">First name</label>
-            <input type="text" class="form-control" id="firstName" formControlName="firstName" placeholder="" value="" required>
-            <div class="invalid-feedback">
-              Valid first name is required.
-            </div>
-          </div>
-          <div class="col-md-6 mb-3">
-            <label for="lastName">Last name</label>
-            <input type="text" class="form-control" id="lastName" formControlName="lastName" placeholder="" value="" required>
-            <div class="invalid-feedback">
-              Valid last name is required.
-            </div>
+      
+
+
+      <ng-container *ngIf="(auth.user$ | async)?.paymentStatus == 'charge:pending' || (auth.user$ | async)?.paymentStatus == 'charge:created'; else noPayment">
+        <div class="card">
+          <div class="card-body">
+            <h4 class="card-title">Your payment is pending...</h4>
+            <h6 class="card-subtitle mb-2 text-muted">Complete your payment on the new tab.</h6>
+            <p class="card-text">We use Coinbase Commerce to process crypto payments. A link should have opened in a new tab to complete your purchace. If not, click below.</p>
+            <a [href]="(auth.user$ | async)?.paymentEndpoint.uri" target="_blank" class="card-link">Open payment</a>
+            <a (click)="cancelCharge()" class="card-link">Cancel payment</a>
           </div>
         </div>
 
-        <div class="mb-3">
-          <label for="email">Email</label>
-          <input type="email" class="form-control" id="email" formControlName="email" placeholder="you@example.com">
-            <div class="invalid-feedback">
-              Please enter a valid email address for shipping updates.
+      </ng-container>
+
+      <ng-template #noPayment>
+        <ng-container *ngIf="(auth.user$ | async)?.cart.length > 0; else noCart">
+          <h4 class="mb-3">Shipping address</h4>
+          <form [formGroup]="checkoutForm" (ngSubmit)="onSubmit()">
+            <div class="row">
+              <div class="col-md-6 mb-3">
+                <label for="firstName">First name</label>
+                <input type="text" class="form-control" id="firstName" formControlName="firstName" required>
+                <div class="invalid-feedback">
+                  Valid first name is required.
+                </div>
+              </div>
+              <div class="col-md-6 mb-3">
+                <label for="lastName">Last name</label>
+                <input type="text" class="form-control" id="lastName" formControlName="lastName" placeholder="" value="" required>
+                <div class="invalid-feedback">
+                  Valid last name is required.
+                </div>
+              </div>
+            </div>
+    
+            <div class="mb-3">
+              <label for="email">Email</label>
+              <input type="email" class="form-control" id="email" formControlName="email" placeholder="you@example.com">
+                <div class="invalid-feedback">
+                  Please enter a valid email address for shipping updates.
+                </div>
+    
+            </div>
+    
+            <div class="mb-3">
+              <label for="address">Address</label>
+              <input type="text" class="form-control" id="address" formControlName="address" placeholder="1234 Main St" required>
+              <div class="invalid-feedback">
+                Please enter your shipping address.
+              </div>
+            </div>
+    
+            <div class="mb-3">
+              <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
+              <input type="text" class="form-control" id="address2" formControlName="address2" placeholder="Apartment or suite">
+            </div>
+    
+            <div class="row">
+              <div class="col-md-4 mb-3">
+                <label for="country">Country</label>
+                <select class="custom-select d-block w-100" id="country" formControlName="country" required>
+                  <option value="">Choose...</option>
+                  <option>United States</option>
+                </select>
+                <div class="invalid-feedback">
+                  Please select a valid country.
+                </div>
+              </div>
+              <div class="col-md-3 mb-3">
+                <label for="state">State</label>
+                <select class="custom-select d-block w-100" formControlName="state" id="state" required>
+                  <option value="">Choose...</option>
+                  <option value="">N/A</option>
+                  <option value="AK">Alaska</option>
+                  <option value="AL">Alabama</option>
+                  <option value="AR">Arkansas</option>
+                  <option value="AZ">Arizona</option>
+                  <option value="CA">California</option>
+                  <option value="CO">Colorado</option>
+                  <option value="CT">Connecticut</option>
+                  <option value="DC">District of Columbia</option>
+                  <option value="DE">Delaware</option>
+                  <option value="FL">Florida</option>
+                  <option value="GA">Georgia</option>
+                  <option value="HI">Hawaii</option>
+                  <option value="IA">Iowa</option>
+                  <option value="ID">Idaho</option>
+                  <option value="IL">Illinois</option>
+                  <option value="IN">Indiana</option>
+                  <option value="KS">Kansas</option>
+                  <option value="KY">Kentucky</option>
+                  <option value="LA">Louisiana</option>
+                  <option value="MA">Massachusetts</option>
+                  <option value="MD">Maryland</option>
+                  <option value="ME">Maine</option>
+                  <option value="MI">Michigan</option>
+                  <option value="MN">Minnesota</option>
+                  <option value="MO">Missouri</option>
+                  <option value="MS">Mississippi</option>
+                  <option value="MT">Montana</option>
+                  <option value="NC">North Carolina</option>
+                  <option value="ND">North Dakota</option>
+                  <option value="NE">Nebraska</option>
+                  <option value="NH">New Hampshire</option>
+                  <option value="NJ">New Jersey</option>
+                  <option value="NM">New Mexico</option>
+                  <option value="NV">Nevada</option>
+                  <option value="NY">New York</option>
+                  <option value="OH">Ohio</option>
+                  <option value="OK">Oklahoma</option>
+                  <option value="OR">Oregon</option>
+                  <option value="PA">Pennsylvania</option>
+                  <option value="PR">Puerto Rico</option>
+                  <option value="RI">Rhode Island</option>
+                  <option value="SC">South Carolina</option>
+                  <option value="SD">South Dakota</option>
+                  <option value="TN">Tennessee</option>
+                  <option value="TX">Texas</option>
+                  <option value="UT">Utah</option>
+                  <option value="VA">Virginia</option>
+                  <option value="VT">Vermont</option>
+                  <option value="WA">Washington</option>
+                  <option value="WI">Wisconsin</option>
+                  <option value="WV">West Virginia</option>
+                  <option value="WY">Wyoming</option>
+                </select>
+                <div class="invalid-feedback">
+                  Please provide a valid state.
+                </div>
+              </div>
+              <div class="col-md-3 mb-3">
+                <label for="city">City</label>
+                <input type="text" class="form-control" id="city" formControlName="city" placeholder="" required>
+                <div class="invalid-feedback">
+                  City required.
+                </div>
+              </div>
+              <div class="col-md-2 mb-3">
+                <label for="zip">Zip</label>
+                <input type="text" class="form-control" id="zip" formControlName="zip" placeholder="" required>
+                <div class="invalid-feedback">
+                  Zip code required.
+                </div>
+              </div>
+              <div class="form-check ml-3">
+                <input type="checkbox" class="form-check-input" id="agree" (change)="agree($event.target.checked)">
+                <label class="form-check-label" for="agree">I agree to the <a routerLink="/terms">Terms of Use</a>.</label>
+              </div>
+            </div>
+            <hr class="mb-4">
+    
+            <h4 class="mb-3">Payment</h4>
+    
+            <div class="d-block my-3">
+              <div class="custom-control custom-radio">
+                <input id="crypto" name="paymentMethod" type="radio" class="custom-control-input" checked required>
+                <label class="custom-control-label" for="crypto">Crypto</label>
+              </div>
+              <div class="custom-control custom-radio">
+                <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required disabled>
+                <label class="custom-control-label" for="paypal">PayPal</label>
+              </div>
             </div>
 
-        </div>
+            <ng-container *ngIf="checkoutForm.valid && doesAgree; else btnDisabled">
+              <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to payment</button>
+            </ng-container>
+            <ng-template #btnDisabled>
+              <button class="btn btn-primary btn-lg btn-block" type="submit" disabled>Continue to payment</button>
+            </ng-template>
+            
+            
 
-        <div class="mb-3">
-          <label for="address">Address</label>
-          <input type="text" class="form-control" id="address" formControlName="address" placeholder="1234 Main St" required>
-          <div class="invalid-feedback">
-            Please enter your shipping address.
-          </div>
-        </div>
-
-        <div class="mb-3">
-          <label for="address2">Address 2 <span class="text-muted">(Optional)</span></label>
-          <input type="text" class="form-control" id="address2" formControlName="address2" placeholder="Apartment or suite">
-        </div>
-
-        <div class="row">
-          <div class="col-md-5 mb-3">
-            <label for="country">Country</label>
-            <select class="custom-select d-block w-100" id="country" formControlName="country" required>
-              <option value="">Choose...</option>
-              <option>United States</option>
-            </select>
-            <div class="invalid-feedback">
-              Please select a valid country.
-            </div>
-          </div>
-          <div class="col-md-4 mb-3">
-            <label for="state">State</label>
-            <select class="custom-select d-block w-100" formControlName="state" id="state" required>
-              <option value="">Choose...</option>
-              <option value="">N/A</option>
-			<option value="AK">Alaska</option>
-			<option value="AL">Alabama</option>
-			<option value="AR">Arkansas</option>
-			<option value="AZ">Arizona</option>
-			<option value="CA">California</option>
-			<option value="CO">Colorado</option>
-			<option value="CT">Connecticut</option>
-			<option value="DC">District of Columbia</option>
-			<option value="DE">Delaware</option>
-			<option value="FL">Florida</option>
-			<option value="GA">Georgia</option>
-			<option value="HI">Hawaii</option>
-			<option value="IA">Iowa</option>
-			<option value="ID">Idaho</option>
-			<option value="IL">Illinois</option>
-			<option value="IN">Indiana</option>
-			<option value="KS">Kansas</option>
-			<option value="KY">Kentucky</option>
-			<option value="LA">Louisiana</option>
-			<option value="MA">Massachusetts</option>
-			<option value="MD">Maryland</option>
-			<option value="ME">Maine</option>
-			<option value="MI">Michigan</option>
-			<option value="MN">Minnesota</option>
-			<option value="MO">Missouri</option>
-			<option value="MS">Mississippi</option>
-			<option value="MT">Montana</option>
-			<option value="NC">North Carolina</option>
-			<option value="ND">North Dakota</option>
-			<option value="NE">Nebraska</option>
-			<option value="NH">New Hampshire</option>
-			<option value="NJ">New Jersey</option>
-			<option value="NM">New Mexico</option>
-			<option value="NV">Nevada</option>
-			<option value="NY">New York</option>
-			<option value="OH">Ohio</option>
-			<option value="OK">Oklahoma</option>
-			<option value="OR">Oregon</option>
-			<option value="PA">Pennsylvania</option>
-			<option value="PR">Puerto Rico</option>
-			<option value="RI">Rhode Island</option>
-			<option value="SC">South Carolina</option>
-			<option value="SD">South Dakota</option>
-			<option value="TN">Tennessee</option>
-			<option value="TX">Texas</option>
-			<option value="UT">Utah</option>
-			<option value="VA">Virginia</option>
-			<option value="VT">Vermont</option>
-			<option value="WA">Washington</option>
-			<option value="WI">Wisconsin</option>
-			<option value="WV">West Virginia</option>
-			<option value="WY">Wyoming</option>
-            </select>
-            <div class="invalid-feedback">
-              Please provide a valid state.
-            </div>
-          </div>
-          <div class="col-md-3 mb-3">
-            <label for="zip">Zip</label>
-            <input type="text" class="form-control" id="zip" formControlName="zip" placeholder="" required>
-            <div class="invalid-feedback">
-              Zip code required.
-            </div>
-          </div>
-        </div>
-        <hr class="mb-4">
-
-        <h4 class="mb-3">Payment</h4>
-
-        <div class="d-block my-3">
-          <div class="custom-control custom-radio">
-            <input id="crypto" name="paymentMethod" type="radio" class="custom-control-input" checked required>
-            <label class="custom-control-label" for="crypto">Crypto</label>
-          </div>
-          <div class="custom-control custom-radio">
-            <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required disabled>
-            <label class="custom-control-label" for="paypal">PayPal</label>
-          </div>
-        </div>
-
-        <ng-container *ngIf="(auth.user$ | async)?.cart.length > 0; else cantPay">
-          <button class="btn btn-primary btn-lg btn-block" type="submit" [disabled]="!checkoutForm.valid">Continue to payment</button>
+  
+          </form>
         </ng-container>
-        <ng-template #cantPay>
-          <button class="btn btn-primary btn-lg btn-block" disabled>Continue to payment</button>
+  
+        <ng-template #noCart>
+          <ng-container *ngIf="!isLoading">
+            <h4>Add some items to your cart! Trust us they are worth it!</h4>
+          </ng-container>
         </ng-template>
-        
-        
-
-      </form>
+      </ng-template>
+      
     </div>
   </div>
 
