--- a/src/app/generate/generate.component.css
+++ b/src/app/generate/generate.component.css
@@ -1,17 +1,34 @@
+.picForm {
+  padding-right: 20px;
+  min-width: 150px;
+  max-width: 500px;
+  width: 100%;
+}
 
-
-  /* .mainImg {
-      max-width: 1000px;
-  } */
-
-  .picForm {
-      padding-right: 20px;
-    min-width: 150px;
-    max-width: 500px;
+.formFullWidth {
     width: 100%;
-  }
+}
 
-  .formFullWidth {
-      width: 100%;
+@media (min-width: 1200px) {
+  .container{
+      max-width: 1500px;
   }
+}
 
+@media only screen and (max-width: 920px) {
+  .checkout,
+  .download,
+  .stlLoading,
+  .generate {
+    margin-top: 15px;
+    margin-right: 15px;
+  }
+}
+
+@media only screen and (min-width: 920px) {
+  .checkout,
+  .download,
+  .generate {
+    margin-left: 15px;
+  }
+}
